--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Pod-Weaver-Plugin-Eval
 
-0.01    2013-04-20 (SHARYANTO) (not yet released)
+0.01    2013-04-20 (SHARYANTO)
 
         First release.
