--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Pod-Weaver-Plugin-Eval
 
+0.02    2013-04-20 (SHARYANTO)
+
+        To be more generic, no longer loads modules for you.
+
+
 0.01    2013-04-20 (SHARYANTO)
 
         First release.
